# ChangeLog for mail-client/mozilla-thunderbird
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/Attic/ChangeLog,v 1.97 2005/12/06 01:54:38 anarchy Exp $

  06 Dec 2005; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-thunderbird-1.5_rc1-r1.ebuild:
  edited for mozconfig-2 split

*mozilla-thunderbird-1.0.7-r3 (03 Dec 2005)

  03 Dec 2005; Jory A. Pratt <anarchy@gentoo.org>
  +files/mozilla-thunderbird-1.0.7-draft-template.patch,
  +mozilla-thunderbird-1.0.7-r3.ebuild:
  patch from nelchael to fix draft/template folders

*mozilla-thunderbird-1.5_rc1-r1 (22 Nov 2005)

  22 Nov 2005; <anarchy@gentoo.org> +files/firefox-1.1-uriloader.patch,
  +files/firefox-1.1-visibility.patch, -files/thunderbird-visibility.patch,
  -mozilla-thunderbird-1.5_rc1.ebuild,
  +mozilla-thunderbird-1.5_rc1-r1.ebuild:
  visibility fixed, uri patch added

  16 Nov 2005; <anarchy@gentoo.org> mozilla-thunderbird-1.0.7-r2.ebuild,
  mozilla-thunderbird-1.5_rc1.ebuild:
  readded patch for rpath

*mozilla-thunderbird-1.5_rc1 (15 Nov 2005)

  15 Nov 2005; <anarchy@gentoo.org> +files/thunderbird-cairo-canvas.patch,
  +files/thunderbird-nopangoxft.patch, +files/thunderbird-visibility.patch,
  +mozilla-thunderbird-1.5_rc1.ebuild:
  initial import for 1.5 testing and preparations, not intended for users

  13 Nov 2005; Michael Hanselmann <hansmi@gentoo.org>
  mozilla-thunderbird-1.0.7-r2.ebuild:
  Fix a compilation issue using the 32-bit userland with 64-bit kernel on
  PowerPC.

*mozilla-thunderbird-1.0.7-r2 (26 Oct 2005)

  26 Oct 2005; Jory A. Pratt <anarchy@gentoo.org>
  +mozilla-thunderbird-1.0.7-r2.ebuild:
  rpath reincluded, gcc-4 not updated as no issues arise with segfault on amd64

*mozilla-thunderbird-1.0.7-r1 (23 Oct 2005)

  23 Oct 2005; <anarchy@gentoo.org> -files/thunderbird-0.7-init.tar.bz2,
  -files/mozilla-thunderbird-1.0.2-gcc4.patch,
  +files/mozilla-thunderbird-1.0.7-gcc-4.0.2.patch,