@@ -4,6 +4,7 @@ MD5 34fc13a505bfb805c539a3b4f0b1bcbf files/digest-mozilla-thunderbird-1.0.7-r1 3
 MD5 106701e2f4e5e9e73301f95dd92c3306 files/digest-mozilla-thunderbird-1.0.7-r2 227
 MD5 34fc13a505bfb805c539a3b4f0b1bcbf files/digest-mozilla-thunderbird-1.0.7-r3 303
 MD5 ed1976eae02ff1d7ea4409be6be9be78 files/digest-mozilla-thunderbird-1.5_rc1-r1 228
+MD5 a3574ae6610e094463d540bb77b535e7 files/digest-mozilla-thunderbird-1.5_rc2 228
 MD5 2bd0dd9035dcb875b8340be358347e8d files/firefox-1.1-uriloader.patch 15300
 MD5 cc5756b8c7af5c88b248b86c73fc5c8d files/firefox-1.1-visibility.patch 930
 MD5 1c810870d0c92c730341e491c310e2d4 files/icon/mozillathunderbird.desktop 184
@@ -21,3 +22,4 @@ MD5 feb3d5b0156f6a9f1af491b50907e32e mozilla-thunderbird-1.0.7-r2.ebuild 6156
 MD5 778b71cc8a385fabd02a28033fa1f4a1 mozilla-thunderbird-1.0.7-r3.ebuild 6378
 MD5 55697b53bd932c2ea9c20d3d5e3b771e mozilla-thunderbird-1.0.7.ebuild 5632
 MD5 0173684748ffb0e547d084132d847457 mozilla-thunderbird-1.5_rc1-r1.ebuild 6442
+MD5 0173684748ffb0e547d084132d847457 mozilla-thunderbird-1.5_rc2.ebuild 6442
