@@ -1,0 +1,3 @@
+MD5 1d6205bf7449fcdcae08cc1db524760d mozilla-firefox-1.0-4ft2.patch.bz2 5601
+MD5 7960994910bda4c14a52bc119f9ceefc mozilla-jslibmath-alpha.patch 625
+MD5 de9476d1a7807627985304bfa69085a3 thunderbird-1.5rc2-source.tar.bz2 35187072
