@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/mozilla-thunderbird
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/Attic/ChangeLog,v 1.97 2005/12/06 01:54:38 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/Attic/ChangeLog,v 1.98 2005/12/24 02:52:07 anarchy Exp $
+
+*mozilla-thunderbird-1.5_rc2 (24 Dec 2005)
+
+  24 Dec 2005; Jory A. Pratt <anarchy@gentoo.org>
+  +mozilla-thunderbird-1.5_rc2.ebuild:
+  revision bump
 
   06 Dec 2005; Jory A. Pratt <anarchy@gentoo.org>
   mozilla-thunderbird-1.5_rc1-r1.ebuild:
